# common-files

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cf.h  cf_config.c  cf_defs.h  cf_home.c  cf_path.c  cf_path.h
test/: CMakeLists.txt  cf_test_utils.h  tests_config.c  tests_home.c  tests_path.c
